Set explicit value for line-height of closed message to avoid a too large line-height.

--- a/src/stylesheets/editor.scss
+++ b/src/stylesheets/editor.scss
@@ -64,6 +64,7 @@
 	padding: 5px 10px;
 	font-weight: bold;
 	font-size: 13px;
+	line-height: 13px;
 
 	.alphaville-marketslive-chat--lock-icon {
 		margin-right: 5px;
